[package]
name = "nulloc"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
log = { version = "0.4.8" }
lazy_static = { version = "*" }
regex = "*"
num_cpus = "1.0"
lfmap = { git = "https://github.com/shisoft/lfmap.rs", branch = "develop" }
crossbeam-queue = "0.1"
sys-info = "*"
errno = "*"

[dev-dependencies]
env_logger = "0.7.1"