[package]
name = "skyhooks"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
log = { version = "0.4.8" }
lazy_static = { version = "*" }
num_cpus = "1.0"
lfmap = { git = "https://github.com/shisoft/lfmap.rs", branch = "develop" }
crossbeam-queue = "*"
crossbeam = "*"
sys-info = "*"
errno = "*"
rand = "*"
rand_xoshiro = "*"
lazy-init = "*"
seahash = "*"

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std"]

[dev-dependencies]
env_logger = "0.7.1"
rand_xorshift = "*"

[features]
bump_heap_only = []